# dale

./: .claude-workflow  .env.local  .env.production.example  .gitignore  CLAUDE.md  PHASE0-COMPLETE.md  TESTING-GUIDE.md  VISA_SYSTEM_README.md  check-employment-types.js  clear-old-data.html  next.config.mjs  package-lock.json  package.json  vercel.json
.husky/: pre-push
backend/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
backend/migration/src/: lib.rs  m20260125_172256_create_agent_conversations.rs  m20260125_172256_create_subscriptions.rs  m20260125_172257_create_autopilot_configs.rs  m20260125_172257_create_usage_metrics.rs  m20260125_174834_add_password_to_users.rs
backend/src/: config.rs  main.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: agent_conversation.rs  autopilot_config.rs  job.rs  mod.rs  resume.rs  subscription.rs  usage_metrics.rs  user.rs
backend/src/routes/: auth.rs  health.rs  mod.rs  webhooks.rs
backend/src/services/: auth.rs  mod.rs  stripe.rs
backend/src/utils/: error.rs  mod.rs  response.rs  validation.rs
docs/: ACCESSIBILITY.md  LOADING_STATES.md
prisma/: schema.prisma  seed-visa-categories.ts
prisma/data/: visa-categories-all.ts  visa-categories-asia-pacific.ts  visa-categories-expanded.ts  visa-categories-global.ts  visa-categories-tier2.ts  (+3 more)
public/: pure-test.html
scripts/: check-locations.ts  check-migrations.ts  install-hooks.sh  run-fulltext-migration.ts  run-materialized-view-migration.ts  setup-vercel-env.sh  test-100k-scale.ts  verify-deployment.sh  wake-database.ts
src/: theme.css
(+244 files in other folders)
